--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "start": "node index.js"
   },
   "author": "Agustin Alessi",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "country-currency-map": "^2.1.8"
+  }
 }
